...
                            if (current is Root) {
                                IconButton(onClick = { navigate(Bulletins) }) {
                                    Icon(Icons.Outlined.NotificationsNone, "馆内公告")
                                }
                                IconButton(
                                    onClick = { navigate(Settings) },
                                    Modifier.testTag("open_settings"),
                                ) {
                                    Icon(Icons.Outlined.Tune, "系统设置")
                                }
                            }
                        },
                        colors =
...
