...
            LazyColumn(
                state = lists[page],
                modifier =
                    Modifier.widthIn(max = 1000.dp)
                        .fillMaxSize()
                        .testTag(
                            if (page == pager.currentPage) "character_detail"
                            else "character_detail_$page"
                        ),
                contentPadding = PaddingValues(bottom = 28.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
            ) {
                item("identity") {
...
